--- a/Simple_Page/index.html
+++ b/Simple_Page/index.html
@@ -32,12 +32,6 @@
         <img src="https://images.pexels.com/photos/27660060/pexels-photo-27660060/free-photo-of-two-people-in-a-tunnel.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" id="photo">
         <button onclick="addText()" id="button">Click me</button>
     </div>
-    <script>
-        function addText(params) {
-            let name = prompt("Enter your name,please!");
-            let header = document.getElementById("myH1");
-            header.textContent = header.textContent.replace("...", name);   
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
